--- a/vqb/package.json
+++ b/vqb/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "reactflow": "^11.10.4",
