SQL Editor redesign

--- a/vqb/package.json
+++ b/vqb/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@uiw/react-codemirror": "^4.21.22",
     "axios": "^1.6.7",
     "codemirror": "^6.0.1",
@@ -26,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.10.4",
     "sql-formatter": "^15.2.0",
     "styled-components": "^6.1.8",
